@@ -1,3 +1,7 @@
+2015-02-11  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* python/py-framefilter.c (py_print_frame): Whitespacing fixes.
+
 2015-02-11  Pedro Alves  <palves@redhat.com>
 
 	* xcoffread.c (within_function): Delete.
